Fix Message not visible on empty Tasks Container
- Added height property on empty task container selector, to show the
"No Tasks" message.

--- a/src/styles/task-controller.css
+++ b/src/styles/task-controller.css
@@ -75,6 +75,10 @@
 		padding-inline: 10%;
 	}
 
+	.tasks-container--empty {
+		height: 5rem;
+	}
+
 	.task__wrap--row {
 		align-items: center;
 	}
